Added endpoints for fetching housing types, added more API tests, fixed test containers.